--- a/ChatSystem.Services/ChatSystem.Services.csproj
+++ b/ChatSystem.Services/ChatSystem.Services.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -214,11 +214,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountBindingModels.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\FriendViewModel.cs" />
-    <Compile Include="Models\GroupViewModel.cs" />
-    <Compile Include="Models\MessageViewModel.cs" />
+    <Compile Include="ServicesModels\AccountBindingModels.cs" />
+    <Compile Include="ServicesModels\AccountViewModels.cs" />
+    <Compile Include="ServicesModels\FriendViewModel.cs" />
+    <Compile Include="ServicesModels\GroupFullModel.cs" />
+    <Compile Include="ServicesModels\GroupIdViewModel.cs" />
+    <Compile Include="ServicesModels\GroupViewModel.cs" />
+    <Compile Include="ServicesModels\MessageViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
