test to demove default home page

--- a/ChatSystem.Services/ChatSystem.Services.csproj
+++ b/ChatSystem.Services/ChatSystem.Services.csproj
@@ -276,7 +276,7 @@
     <Content Include="Views\client\bootstrap\js\bootstrap.min.js" />
     <Content Include="Views\client\bootstrap\js\npm.js" />
     <Content Include="Views\client\css\styles.css" />
-    <Content Include="Views\client\index.html" />
+    <None Include="Views\client\index.cshtml" />
     <Content Include="Views\client\libs\jquery-2.1.1.min.js" />
     <Content Include="Views\client\libs\jquery.noty.packaged.min.js" />
     <Content Include="Views\client\libs\mustache.js" />
@@ -304,10 +304,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Views\Web.config" />
-    <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\client\bootstrap\css\bootstrap-theme.css.map" />
     <Content Include="Views\client\bootstrap\css\bootstrap.css.map" />
@@ -318,6 +315,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
